recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:19: error: ';' expected but 'else' found.
  else {
  ^